# minkipc

./: CMakeLists.txt
.github/workflows/: sync_build.yml
ci/: build.sh
listeners/libgptservice/: CMakeLists.txt  gpt_service.c
rpmb_client/: CMakeLists.txt  rpmb_client.c
rpmb_client/idl/: CRPMBService.h  CRPMBService.idl  IRPMBService.h  IRPMBService.idl
