# Copyright (c) 2022-2025 Qualcomm Technologies, Inc.
# All Rights Reserved.
# Confidential and Proprietary - Qualcomm Technologies, Inc.
# SPDX-License-Identifier: BSD-3-Clause-Clear

project(rpmb_client C)

# ---------------------------------------------------------------------------
# IDL header generation
#
# The mink IDL compiler (idlc) generates two headers per IDL file:
#   <Name>.h        — interface header (method stubs, error codes)
#   <Name>_invoke.h — skeleton header (server-side dispatch, not needed here)
#
# Headers are written into the source tree (matching the pattern used by
# listenercbo and smcinvoke_client) so that #include "IRPMBService.h" and
# #include "CRPMBService.h" resolve from the idl/ subdirectory.
# ---------------------------------------------------------------------------

set(RPMB_IDLS
	idl/IRPMBService
	idl/CRPMBService
)

set(IDL_OUT_LIST "")

foreach(IDL ${RPMB_IDLS})
	set(IDL_OUT   ${CMAKE_CURRENT_SOURCE_DIR}/${IDL}.h)
	set(IDL_INPUT ${CMAKE_CURRENT_SOURCE_DIR}/${IDL}.idl)

	add_custom_command(
		OUTPUT  ${IDL_OUT}
		DEPENDS ${IDL_INPUT}
		COMMAND ${MINKIDLC_BIN_DIR}/idlc ${IDL_INPUT} -o ${IDL_OUT}
		COMMENT "Generating IDL header: ${IDL_OUT}"
	)

	list(APPEND IDL_OUT_LIST ${IDL_OUT})
endforeach()

# Custom target that drives IDL header generation.
add_custom_target(
	${PROJECT_NAME}_MINKHEADERS ALL
	DEPENDS ${IDL_OUT_LIST}
)

# ---------------------------------------------------------------------------
# Executable
# ---------------------------------------------------------------------------

add_executable(${PROJECT_NAME}
	rpmb_client.c
)

# Depend on our own IDL headers and on listenercbo for IClientEnv.h
add_dependencies(${PROJECT_NAME}
	${PROJECT_NAME}_MINKHEADERS
	listenercbo_MINKHEADERS
)

# ---------------------------------------------------------------------------
# Include paths
#
# Search order:
#   1. rpmb_client/idl/   — IRPMBService.h, CRPMBService.h (generated above)
#   2. listenercbo/idl/   — IClientEnv.h (generated by listenercbo target)
#   3. libminkadaptor/include/ — object.h, MinkCom.h
# ---------------------------------------------------------------------------

target_include_directories(${PROJECT_NAME}
	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/idl
	PRIVATE ${CMAKE_SOURCE_DIR}/listeners/listenercbo/idl
	PRIVATE ${CMAKE_SOURCE_DIR}/libminkadaptor/include
)

# ---------------------------------------------------------------------------
# Link libraries
#
# minkadaptor — provides MinkCom_getRootEnvObject(),
#               MinkCom_getClientEnvObject(), and the Object_invoke() gateway
# ---------------------------------------------------------------------------

target_link_libraries(${PROJECT_NAME}
	PRIVATE minkadaptor
)

# ---------------------------------------------------------------------------
# Optional: RPMB test subsystem
#
# Enable with:  cmake -DRPMB_ENABLE_TESTS=ON ...
#
# When ON,  the binary is compiled with -DRPMB_ENABLE_TESTS and the
# --test / -t command-line flag activates rpmb_run_tests().
#
# When OFF (default / production), all test code is excluded from the
# binary at compile time — no size or behaviour change.
#
# No external test framework is required; the test subsystem uses only
# minkipc headers and POSIX C.
# ---------------------------------------------------------------------------

option(RPMB_ENABLE_TESTS "Enable RPMB test subsystem (adds --test flag)" OFF)

if(RPMB_ENABLE_TESTS)
	message(STATUS "rpmb_client: RPMB_ENABLE_TESTS=ON — test subsystem included")
	target_compile_definitions(${PROJECT_NAME}
		PRIVATE RPMB_ENABLE_TESTS
	)
else()
	message(STATUS "rpmb_client: RPMB_ENABLE_TESTS=OFF — production build")
endif()

# ---------------------------------------------------------------------------
# Install
# ---------------------------------------------------------------------------

install(TARGETS ${PROJECT_NAME}
	DESTINATION "${CMAKE_INSTALL_BINDIR}"
)
